Removed jpg for now as it is giving errors (Ben will fix it later), updated hero sections to loke same until Ipads, updated 2 column sections to be 10 column wide on Ipads & heading centred

--- a/free-ebook/index.html
+++ b/free-ebook/index.html
@@ -62,7 +62,7 @@
             <div class="col-12 col-lg-5 pl-lg-4 text-center">
                 <p class="eyebrow d-lg-none"> shocking free report reveals </p>
                 <h1 class="d-lg-none"> Nice And Big Super Sexy And Compelling Headline </h1>
-                <img class="lazyload book-cover max-width-image" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
+                <img class="lazyload book-cover max-width-image" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
             </div>
         </div>
     </div>
@@ -78,22 +78,22 @@
             <div class="col-12 col-xl-10">
                 <div class="row slider align-items-center justify-content-center">
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
+                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
+                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
+                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
+                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
+                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
+                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
 <!-- Testmionials Section -->
 <section class="testimonials text-center text-light">
     <div class="background-image-container semi-transparent-bg-dark">
-        <img class="lazyload" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
+        <img class="lazyload" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
     </div>
     <div class="container">
         <div class="row justify-content-center">
