--- a/questionnaire/index.html
+++ b/questionnaire/index.html
@@ -42,7 +42,7 @@
                 <h1>LOCK IN YOUR FREE, ZERO-RISK, 30-MINUTE HOME SELLING CONSULTATION NOW</h1>
             </div>
             <div class="col-12 text-center">
-                <img class="img-fluid-lazyload mb-4" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg" alt=""/>
+                <img class="img-fluid-lazyload mb-4" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.png" alt=""/>
             </div>
             <div class="col-md-8 col-lg-6 text-center">
                 <p> Simply take 2 minutes to fill in this form and you’ll take the first step towards discovering how to sell your home for it’s maximum price, in minimum time. </p>
