--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -36,7 +36,7 @@
 
 <section id="hero" class="hero-centered d-flex justify-content-center align-items-center">
     <div class="background-image-container semi-transparent-bg-light">
-        <img class="lazyload" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
+        <img class="lazyload" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
     </div>
     <div class="container">
         <div class="row justify-content-center text-center">
