--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -50,7 +50,7 @@
 </section>
 
 <!-- Footer - King Kong Tag -->
-<footer class="bg-dark text-white">
+<footer>
     <div class="container">
         <div class="row text-center">
             <div class="col-12 py-4">
