--- a/free-ebook/index.html
+++ b/free-ebook/index.html
@@ -35,8 +35,8 @@
 
 <section id="hero">
     <div class="container">
-        <div class="row d-flex flex-column-reverse flex-lg-row align-items-center">
-            <div class="col-12 col-lg-7 pr-lg-4">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-10 col-lg-7 order-last order-lg-first">
                 <p class="eyebrow d-none d-lg-block"> shocking free report reveals </p>
                 <h1 class="d-none d-lg-block"> Nice And Big Super Sexy And Compelling Headline </h1>
                 <p class="subheadline"> Super compelling and punchy sub headline that is generally slightly lighter in colorthan the headline but not so much. </p>
@@ -45,11 +45,11 @@
                         <div class="form-content">
                             <label for="name">
                                 <span class='icon icon-name'><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="../assets/prod/images/icon-username.png" alt="Icon User"></span>
-                                <input type="text" class="name" name="name" id="name" placeholder="Name" required>
+                                <input type="text" class="name" name="name" id="name" placeholder="Name" required />
                             </label>
                             <label for="email">
                                 <span class='icon icon-email'><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="../assets/prod/images/icon-email.png" alt="Icon Email"></span>
-                                <input type="email" class="email" id="email" name="email" placeholder="Email" required>
+                                <input type="email" class="email" id="email" name="email" placeholder="Email" required />
                             </label>
                             <div class="btn-section">
                                 <input type="submit" class="btn btn-primary" value="Get My Free Ebook"></input>
@@ -59,10 +59,10 @@
                     </form>
                 </div>
             </div>
-            <div class="col-12 col-lg-5 pl-lg-4 text-center">
+            <div class="col-md-10 col-lg-5 text-center order-first order-lg-last">
                 <p class="eyebrow d-lg-none"> shocking free report reveals </p>
                 <h1 class="d-lg-none"> Nice And Big Super Sexy And Compelling Headline </h1>
-                <img class="lazyload book-cover max-width-image" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
+                <img class="lazyload view-animation fade-left book-cover max-width-image mb-5 mb-lg-0" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
             </div>
         </div>
     </div>
@@ -72,10 +72,10 @@
 <section class="featured-in bg-light less-pad">
     <div class="container-fluid">
         <div class="row justify-content-center align-items-center">
-            <div class="col-12 col-xl-2">
+            <div class="col-xl-2">
                 <h5 class="text-center mb-xl-0">Featured In:</h5>
             </div>
-            <div class="col-12 col-xl-10">
+            <div class="col-xl-10">
                 <div class="row slider align-items-center justify-content-center">
                     <div class="col slide text-center">
                         <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
@@ -113,11 +113,26 @@
                 <p> [Achieving desired outcome] can be much easier than you think. Many people simply don’t know the correct steps to take which makes them take far longer than they need to. We’ve done all the hard work for you, so all you need to do is follow our step-by-step blueprint and you’ll [achieve desired outcome] in no time. </p>
 
                 <ul class="styled-list">
-                    <li> <p> <strong>Free Consultation With A Certified Orangetheory Coach:</strong> Sit down with one of our experienced coaches where they’ll breakdown your goals and how to achieve them</p> </li>
-                    <li> <p> <strong>Proven Fat Burning And Muscle Building Routines:</strong> Access to scientific-based training regimes</p> </li>
-                    <li> <p> <strong>FREE BODY SCAN:</strong> A full-body composition scan so you know exactly how much lean muscle you have and how much fat you can lose</p> </li>
-                    <li> <p> <strong>Access To The Studio:</strong> Access to any 3 Orangetheory classes when you try us free for 7-days</p> </li>
-                    <li> <p> <strong>Otbeat Heart Rate Monitor To Use For Free:</strong> You’ll get your very own heart rate monitor to loan for your free week. When you decide to sign up for a membership, you'll get up to 50% off your device!* </p> </li>
+                    <li class="d-flex align-items-start mb-5">
+                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/svgs/icon-check.svg" alt="Icon check">
+                        <p class="mb-0"> <strong>Free Consultation With A Certified Orangetheory Coach:</strong> Sit down with one of our experienced coaches where they’ll breakdown your goals and how to achieve them</p>
+                    </li>
+                    <li class="d-flex align-items-start mb-5">
+                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/svgs/icon-check.svg" alt="Icon check">
+                        <p class="mb-0"> <strong>Proven Fat Burning And Muscle Building Routines:</strong> Access to scientific-based training regimes</p>
+                    </li>
+                    <li class="d-flex align-items-start mb-5">
+                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/svgs/icon-check.svg" alt="Icon check">
+                        <p class="mb-0"> <strong>FREE BODY SCAN:</strong> A full-body composition scan so you know exactly how much lean muscle you have and how much fat you can lose</p>
+                    </li>
+                    <li class="d-flex align-items-start mb-5">
+                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/svgs/icon-check.svg" alt="Icon check">
+                        <p class="mb-0"> <strong>Access To The Studio:</strong> Access to any 3 Orangetheory classes when you try us free for 7-days</p>
+                    </li>
+                    <li class="d-flex align-items-start mb-5">
+                        <img class="view-animation img-fluid mr-4 mt-2" src="../assets/svgs/icon-check.svg" alt="Icon check">
+                        <p class="mb-0"> <strong>Otbeat Heart Rate Monitor To Use For Free:</strong> You’ll get your very own heart rate monitor to loan for your free week. When you decide to sign up for a membership, you'll get up to 50% off your device!* </p>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -133,7 +148,7 @@
 
 <!-- Testmionials Section -->
 <section class="testimonials text-center text-light">
-    <div class="background-image-container semi-transparent-bg-dark">
+    <div class="background-image-container">
         <img class="lazyload" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.png">
     </div>
     <div class="container">
@@ -141,25 +156,24 @@
             <div class="col-md-10 col-lg-8">
                 <h2>This Is What Our Customers Are Saying About Us...</h2>
             </div>
-            <div class="col-md-10 col-lg-8">
+            <div class="col-md-10 col-lg-8 px-0">
+
                 <!-- Slider and slides within -->
-                <div class="slider">
-                    <div class="slide">
-                        <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
+                <div class="swiper-container reviews d-flex justify-content-center align-items-center text-center">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slide-1">
+                            <p class="mx-auto">This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
+                        </div>
+                        <div class="swiper-slide slide-2">
+                            <p class="mx-auto">It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks. This is the paragraph text of the section.</p>
+                        </div>
+                        <div class="swiper-slide slide-3">
+                            <p class="mx-auto">Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks. This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs.</p>
+                        </div>
                     </div>
-                    <div class="slide">
-                        <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
-                    </div>
-                    <div class="slide">
-                        <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
-                    </div>
-                </div>
-                <!-- Slider Nav -->
-                <div class="prev">
-                    <img class="view-animation img-fluid icon" src="../assets/svgs/icon-previous.svg" alt="Icon Previous">
-                </div>
-                <div class="next">
-                    <img class="view-animation img-fluid icon" src="../assets/svgs/icon-next.svg" alt="Icon Previous">
+                    <!-- Add Navigation -->
+                    <div class="swiper-button-prev view-animation"></div>
+                    <div class="swiper-button-next view-animation"></div>
                 </div>
             </div>
         </div>
@@ -168,7 +182,7 @@
 
 <section id="final" class="single-column">
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mb-5">
             <div class="col-lg-8 text-center">
                 <h2> Get <u>INSTANT</u> access to this shocking free report now </h2>
             </div>
@@ -177,7 +191,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-md-8 col-lg-6 mt-4">
+            <div class="col-md-8 col-lg-6">
                 <div class="btn-section text-center">
                     <a href="#ebook-form" class="btn btn-primary">Send My Free Report</a>
                 </div>
@@ -187,7 +201,7 @@
 </section>
 
 <!-- Footer - King Kong Tag -->
-<footer class="bg-dark text-white">
+<footer>
     <div class="container">
         <div class="row text-center">
             <div class="col-12 py-4">
@@ -199,5 +213,28 @@
 
 <!-- Custom Scripts -->
 <script type="text/javascript" src="../assets/prod/js/main.js"></script>
+
+<!-- Lead Library Script -->
+<!-- <script type="text/javascript" src="https://scripts.kingkong.net.au/tracker.min.js"></script> -->
+
+<!-- Active Campaign reCAPTCHA -->
+<!-- <script type="text/javascript" src="https:////www.google.com/recaptcha/api.js?onload=recaptcha_callback&render=explicit"></script>
+<script>
+    window['recaptcha_callback'] = function () {
+        // Get all recaptchas in the DOM (there may be more than one form on the page).
+        var recaptchas = document.getElementsByClassName("g-recaptcha");
+        for (var i in recaptchas) {
+            // Set the recaptcha element ID, so the recaptcha can be applied to each element.
+            var recaptcha_id = "recaptcha_" + i;
+            recaptchas[i].id = recaptcha_id;
+            var el = document.getElementById(recaptcha_id);
+            if (el != null) {
+                var sitekey = el.getAttribute("data-sitekey");
+                var stoken = el.getAttribute("data-stoken");
+                grecaptcha.render(recaptcha_id, { "sitekey": sitekey, "stoken": stoken });
+            }
+        }
+    }
+</script> -->
 </body>
 </html>
